k8s/qa/03-db2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db2
  namespace: grupo4-qa
  labels:
    app: db2
    app.kubernetes.io/part-of: smartgrid
    app.kubernetes.io/managed-by: grupo4
    entorno: qa
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: db2 }
  template:
    metadata:
      labels:
        app: db2
        app.kubernetes.io/part-of: smartgrid
        entorno: qa
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: datos
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d capacidad"] }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d capacidad"] }
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 250m, memory: 256Mi }
      volumes:
        - name: datos
          persistentVolumeClaim:
            claimName: db2-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db2
  namespace: grupo4-qa
  labels: { app: db2, app.kubernetes.io/part-of: smartgrid, entorno: qa }
spec:
  type: ClusterIP
  selector: { app: db2 }
  ports:
    - port: 5432
      targetPort: 5432
