k8s/qa/04-db3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db3
  namespace: grupo4-qa
  labels:
    app: db3
    app.kubernetes.io/part-of: smartgrid
    app.kubernetes.io/managed-by: grupo4
    entorno: qa
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: db3 }
  template:
    metadata:
      labels:
        app: db3
        app.kubernetes.io/part-of: smartgrid
        entorno: qa
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: datos
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          readinessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d facturacion"] }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d facturacion"] }
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 300m, memory: 256Mi }
      volumes:
        - name: datos
          persistentVolumeClaim:
            claimName: db3-pvc
        - name: init-sql
          configMap:
            name: db3-init
---
apiVersion: v1
kind: Service
metadata:
  name: db3
  namespace: grupo4-qa
  labels: { app: db3, app.kubernetes.io/part-of: smartgrid, entorno: qa }
spec:
  type: ClusterIP
  selector: { app: db3 }
  ports:
    - port: 5432
      targetPort: 5432
