k8s/qa/05-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: grupo4-qa
  labels:
    app: rabbitmq
    app.kubernetes.io/part-of: smartgrid
    app.kubernetes.io/managed-by: grupo4
    entorno: qa
spec:
  replicas: 1
  strategy:
    type: Recreate                      
  selector:
    matchLabels: { app: rabbitmq }
  template:
    metadata:
      labels:
        app: rabbitmq
        app.kubernetes.io/part-of: smartgrid
        entorno: qa
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - { name: amqp, containerPort: 5672 }
            - { name: management, containerPort: 15672 }
          volumeMounts:
            - name: datos-rabbit
              mountPath: /var/lib/rabbitmq
          readinessProbe:
            exec: { command: ["rabbitmq-diagnostics","-q","ping"] }
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 15        # el ping de Erlang es lento en CPU limitada
            failureThreshold: 6
          livenessProbe:
            exec: { command: ["rabbitmq-diagnostics","-q","ping"] }
            initialDelaySeconds: 90    # RabbitMQ tarda ~40s en bootear; damos aire
            periodSeconds: 30
            timeoutSeconds: 15        # sin esto usa 1s por defecto y mata un pod sano
            failureThreshold: 6
          resources:
            requests: { cpu: 100m, memory: 256Mi }
            limits:   { cpu: 500m, memory: 512Mi }
      volumes:
        - name: datos-rabbit
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: grupo4-qa
  labels: { app: rabbitmq, app.kubernetes.io/part-of: smartgrid, entorno: qa }
spec:
  type: ClusterIP
  selector: { app: rabbitmq }
  ports:
    - { name: amqp, port: 5672, targetPort: 5672 }
    - { name: management, port: 15672, targetPort: 15672 }
